--- a/My_Cookie.conf
+++ b/My_Cookie.conf
@@ -1,4 +1,4 @@
-hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, e.189.cn
+hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn
 
 # NobyDa
 
