--- a/My_JS.conf
+++ b/My_JS.conf
@@ -1,4 +1,4 @@
-hostname = mp.weixin.qq.com, app.bilibili.com, api.bilibili.com, api.m.jd.com, trade-acs.m.taobao.com,  *.kuwo.cn, pan.baidu.com , api.zhihu.com, link.zhihu.com , *.kuwo.cn, vip1.kuwo.cn
+hostname = mp.weixin.qq.com, app.bilibili.com, api.bilibili.com, api.m.jd.com, trade-acs.m.taobao.com,  *.kuwo.cn, wapside.189.cn, wapside.189.cn:9001, api.zhihu.com, link.zhihu.com , *.kuwo.cn, vip1.kuwo.cn
 
 # 去微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
@@ -28,10 +28,8 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
 ^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?uid\=\d+ url 302 http://musicpay.kuwo.cn/music.pay?uid=1
 
-# 百度网盘手机页面优化
-# 可直接下载视频/音频/zip 等文件
-^https:\/\/pan\.baidu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36$2
-^https:\/\/pan\.baidu\.com url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/baiduPan.js
+# 中国电信金豆兑换话费 (By elecV2)
+^https:\/\/wapside.189.cn:9001\/api\/exchange\/consume url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js
 
 # 知乎去广告 (By onewayticket255)
 https://api.zhihu.com/(ad|drama|fringe|commercial|market/popover|search/(top|preset|tab)|.*featured-comment-ad) url reject-200
