--- a/My_Cookie.conf
+++ b/My_Cookie.conf
@@ -1,4 +1,4 @@
-hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001
+hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001, xiaoshuo.qm989.com
 
 # NobyDa
 
@@ -44,3 +44,6 @@ https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url 
 
 # 中国电信金豆兑换话费 (By elecV2)
 ^https:\/\/wapside.189.cn:9001\/api\/exchange\/consume url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js
+
+# 七猫小说
+^https:\/\/xiaoshuo\.qm989\.com url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/qimao/qmnovel.js
