--- a/My_Cookie.conf
+++ b/My_Cookie.conf
@@ -1,4 +1,4 @@
-hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001
+hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001, wq.jd.com
 
 # NobyDa
 
@@ -42,7 +42,7 @@ https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url 
 # 从京东APP宠汪汪->领狗粮->邀请好友助力，分享给你小号微信或者微信的文件传输助手。 自己再打开刚才的分享，助力成功后，退出小程序重新进去刚才分享的小程序即可
 ^https:\/\/draw\.jdfcloud\.com\/\/pet\/enterRoom\?reqSource=weapp&invitePin=.*+(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?|^https:\/\/draw\.jdfcloud\.com\/\/pet\/helpFriend\?friendPin url script-request-header https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_help.js
 
-# 中国电信金豆兑换话费 (By elecV2)
-^https:\/\/wapside.189.cn:9001\/api\/exchange\/consume url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js
+# 京喜农场
+^https\:\/\/wq\.jd\.com\/cubeactive\/farm\/dotask url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.cookie.js
 
 
