--- a/My_Cookie.conf
+++ b/My_Cookie.conf
@@ -1,4 +1,4 @@
-hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001, wq.jd.com
+hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001, wq.jd.com, alipaymini.189.cn, alipaymini.189.cn:8043
 
 # NobyDa
 
@@ -44,5 +44,9 @@ https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url 
 
 # 京喜农场
 ^https\:\/\/wq\.jd\.com\/cubeactive\/farm\/dotask url script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.cookie.js
+
+# 电信营业厅整点开宝箱
+
+https:\/\/alipaymini\.189\.cn:8043\/treasureBox\/queryUserActivityInfo url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js
 
 
