--- a/My_Cookie.conf
+++ b/My_Cookie.conf
@@ -1,4 +1,4 @@
-hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, h5.ele.me, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001, wq.jd.com, alipaymini.189.cn, alipaymini.189.cn:8043
+hostname= api.m.jd.com, c.tieba.baidu.com, www.52pojie.cn, *.bilibili.com, *.y.qq.com, act.10010.com, ms.jr.jd.com, m.client.10010.com, draw.jdfcloud.com, tieba.baidu.com, wapside.189.cn, wapside.189.cn:9001, wq.jd.com, alipaymini.189.cn, alipaymini.189.cn:8043
 
 # NobyDa
 
@@ -27,7 +27,8 @@ https?:\/\/c\.tieba\.baidu\.com\/c\/s\/login url script-request-header https://r
 # 京东618
 ^https:\/\/api.m.jd.com\/client.action\?functionId=cakebaker_getHomeData url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/jd/jd.618.cookie.js
 
-#Other
+;京东白条Cookie
+^https:\/\/ms\.jr\.jd\.com\/gw\/generic\/bt\/h5\/m\/queryCreditManage url script-request-header https://raw.githubusercontent.com/cyubuchen/scripts/master/task/jdBaiTiao.js
 
 # 饿了么 (By @syzzzf)
 ^https:\/\/h5\.ele\.me\/restapi\/eus\/v\d\/current_user$ url script-request-header https://raw.githubusercontent.com/songyangzz/QuantumultX/master/elem/elemGetCookies.js
